cluster/apps/homeassistant/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant
  namespace: homeassistant
subsets:
- addresses:
  - ip: 10.0.1.71
  ports:
  - name: HTTP
    port: 8123
    protocol: TCP
