cluster/apps/homeassistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  ports:
    - protocol: HTTP
      port: 8123
      targetPort: 8123
